# sacabench

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.rej  current_run  ran_algs  removed_algs  some-changes.patch
sacabench/: CMakeLists.txt  CMakeLists.txt.rej  sacabench.cpp  sacabench.cpp.rej
sacabench/saca/: naive.hpp  register.cmake  register.cmake.rej  register_ineff_dropped.cmake
sacabench/saca/deep_shallow/: saca.hpp
sacabench/util/: assertions.hpp  assertions.hpp.rej  likwid_myapi.h
